# bifrost

./: .gitignore  .travis.yml  Architecture.md  Bifrost.toml  Cargo.toml  HomebrewFormula  LICENSE  README.md  journal.md  todo.md
pkg/brew/: bifrost-rs.rb
src/: app.rs  command.rs  config.rs  dir.rs  lib.rs  main.rs  template.rs  workspace.rs
src/bifrost/: lib.rs
src/bifrost/core/: app.rs  config.rs  hofund.rs  mod.rs  working_dir.rs  workingdir.rs  workspace.rs
src/bifrost/ops/: bifrost_init.rs  bifrost_load.rs  bifrost_run.rs  bifrost_show.rs  bifrost_unload.rs  mod.rs
src/bifrost/util/: bifrost_path.rs  docker.rs  mod.rs  operation_info.rs  process_builder.rs  template.rs
tests/: lib.rs
tests/test_dir/: test_ignore_file.txt
tests/test_user/test_app_dir/: .bifrost_ignore  .test_bad_config  .test_config  Bifrost.toml  TestBifrost.toml
tests/test_user/test_app_dir/test_file_dir/: file.txt
