[package]
name = "bifrost"
version = "0.1.0"
authors = ["ericdeansanchez <ericdeansanchez@berkeley.edu>", "parkerduckworth <parker_duckworth@icloud.com>"]
documentation = "https://github.com/ericdeansanchez/bifrost"
homepage = "https://github.com/ericdeansanchez/bifrost"
repository = "https://github.com/ericdeansanchez/bifrost"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "bifrost"
path = "src/bifrost/lib.rs"

[dependencies]
clap = "2.33.0"
dirs = "1.0.5"
failure = "*"
libc = "0.2.51"
serde = "1.0"
serde_derive = "1.0"
spinner = "0.3"
subprocess = "0.1.18"
regex = "1"
walkdir = "2.2.7"
toml = "0.5"

[[test]]
name = "integration"
path = "tests/lib.rs"